--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Tripi</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_farm">Farm</string>
+    <string name="title_map">Map</string>
+    <string name="title_camera">Camera</string>
+    <string name="title_quests">Quests</string>
+    <string name="title_profile">Profile</string>
 </resources>
