--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_camera">Camera</string>
     <string name="title_quests">Quests</string>
     <string name="title_profile">Profile</string>
+    <string name="sticker_image" />
 </resources>
